# squibble

./: .gitignore  README.md  REFLECTION.md  REVIEW.md  SPEC.md  TODO.md  prompt_log.txt
backend/: .env.example  config.py  constants.py  main.py  pyproject.toml
backend/jobs/: store.py
backend/models/: editor.py  events.py  job.py  script.py
backend/routers/: generation.py  script.py  stopmotion.py
backend/scripts/: complete_haman_video.py  test_image_prompt.py  test_script_prompt.py  test_stop_motion_image_generation.py
backend/services/: audio_service.py  generation_service.py  image_service.py  script_buffer.py  script_service.py  stop_motion_service.py  video_service.py
backend/sessions/: store.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/stop-motion/: page.tsx
frontend/src/components/shared/: Button.module.css  Button.tsx  CancelButton.tsx  ErrorMessage.module.css  ErrorMessage.tsx  GlassPanel.module.css  GlassPanel.tsx
frontend/src/components/stage1/: ChatBar.module.css  ChatBar.tsx  LineBlock.module.css  LineBlock.tsx  ScriptEditor.module.css  ScriptEditor.tsx
frontend/src/components/stage2/: GenerationGrid.module.css  GenerationGrid.tsx  SlideCard.module.css  SlideCard.tsx  SlidePreviewModal.module.css  SlidePreviewModal.tsx
frontend/src/hooks/: useChat.ts  useGeneration.ts  useInView.ts  useScriptEditor.ts
frontend/src/lib/: apiClient.ts  splitSentences.ts
frontend/src/types/: index.ts
