[project]
name = "squibble-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "anthropic>=0.39.0",
    "elevenlabs>=1.50.0",
    "google-genai>=0.8.0",
    "httpx>=0.27.0",
    "mutagen>=1.47.0",
    "python-multipart>=0.0.12",
]
